// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DelegateRow should emit action on select button 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY font-bold border-2 border-r-0 border-transparent space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 gljhIf -ml-0.5 flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <span>
              arkx
            </span>
          </div>
        </td>
        <td
          class="w-24"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center border-t-2 border-b-2 border-transparent"
          >
            <a
              class="Link__AnchorStyled-sc-ec014t-0 eeKUfa group ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="DelegateRow__address"
              href="#"
              rel="noopener noreferrer"
              to=""
            >
              <span
                class="Link__Content-sc-ec014t-1 fPOlTq"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-external.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end border-2 border-l-0 border-transparent"
          >
            <div
              class="-mr-0.5"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Select
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateRow should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY font-bold border-2 border-r-0 border-transparent space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 gljhIf -ml-0.5 flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <span>
              arkx
            </span>
          </div>
        </td>
        <td
          class="w-24"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center border-t-2 border-b-2 border-transparent"
          >
            <a
              class="Link__AnchorStyled-sc-ec014t-0 eeKUfa group ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="DelegateRow__address"
              href="#"
              rel="noopener noreferrer"
              to=""
            >
              <span
                class="Link__Content-sc-ec014t-1 fPOlTq"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-external.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end border-2 border-l-0 border-transparent"
          >
            <div
              class="-mr-0.5"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Select
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateRow should render changed style when network requires vote amount 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY font-bold border-2 border-r-0 border-transparent space-x-4 bg-theme-warning-50 dark:bg-theme-background dark:border-theme-warning-600"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 gljhIf -ml-0.5 flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <span>
              arkx
            </span>
          </div>
        </td>
        <td
          class="w-24"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center border-t-2 border-b-2 border-transparent bg-theme-warning-50 dark:bg-theme-background dark:border-theme-warning-600"
          >
            <a
              class="Link__AnchorStyled-sc-ec014t-0 eeKUfa group ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="DelegateRow__address"
              href="#"
              rel="noopener noreferrer"
              to=""
            >
              <span
                class="Link__Content-sc-ec014t-1 fPOlTq"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-external.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-68"
          data-testid="DelegateVoteAmount"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center border-t-2 border-b-2 border-transparent bg-theme-warning-50 dark:bg-theme-background dark:border-theme-warning-600"
          >
            <div
              class="relative flex-1 px-3"
            >
              <div
                class="relative"
              >
                <div
                  class="Input__InputWrapperStyled-sc-1i8sd1r-0 fJIMQr"
                >
                  <div
                    class="relative flex flex-1 h-full"
                  >
                    <input
                      aria-invalid="false"
                      class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full text-right focus:text-left pr-8"
                      data-testid="InputCurrency"
                      name="amount"
                      placeholder="0"
                      type="text"
                      value="30"
                    />
                  </div>
                </div>
              </div>
              <span
                class="absolute inset-y-0 flex items-center space-x-3 right-7"
                data-testid="DelegateVoteAmount__ticker"
              >
                <span
                  class="text-theme-text"
                >
                  ARK
                </span>
              </span>
            </div>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end border-2 border-l-0 border-transparent bg-theme-warning-50 dark:bg-theme-background dark:border-theme-warning-600"
          >
            <div
              class="-mr-0.5"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 iccqMs"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Changed
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateRow should render the selected delegate 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY font-bold border-2 border-r-0 border-transparent space-x-4 bg-theme-primary-reverse-50 dark:bg-theme-background dark:border-theme-primary-reverse-600"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 gljhIf -ml-0.5 flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <span>
              arkx
            </span>
          </div>
        </td>
        <td
          class="w-24"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center border-t-2 border-b-2 border-transparent bg-theme-primary-reverse-50 dark:bg-theme-background dark:border-theme-primary-reverse-600"
          >
            <a
              class="Link__AnchorStyled-sc-ec014t-0 eeKUfa group ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="DelegateRow__address"
              href="#"
              rel="noopener noreferrer"
              to=""
            >
              <span
                class="Link__Content-sc-ec014t-1 fPOlTq"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-external.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end border-2 border-l-0 border-transparent bg-theme-primary-reverse-50 dark:bg-theme-background dark:border-theme-primary-reverse-600"
          >
            <div
              class="-mr-0.5"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 IWDiW"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Selected
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateRow should render the selected vote 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 UdZIx font-bold border-2 border-r-0 border-transparent space-x-3 bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 bzZufz -ml-0.5 flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <span>
              arkx
            </span>
          </div>
        </td>
        <td
          class="w-24"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD justify-center border-t-2 border-b-2 border-transparent bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600"
          >
            <a
              class="Link__AnchorStyled-sc-ec014t-0 eeKUfa group ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="DelegateRow__address"
              href="#"
              rel="noopener noreferrer"
              to=""
            >
              <span
                class="Link__Content-sc-ec014t-1 fPOlTq"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-external.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 dMbCwx justify-end border-2 border-l-0 border-transparent bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600"
          >
            <div
              class="-mr-0.5"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 enzTPF -mr-3 text-theme-primary-600 hover:text-theme-primary-700"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Current
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 UdZIx font-bold border-2 border-r-0 border-transparent space-x-3"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 bzZufz -ml-0.5 flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                  title="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                />
              </div>
            </div>
            <span>
              genesis_42
            </span>
          </div>
        </td>
        <td
          class="w-24"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD justify-center border-t-2 border-b-2 border-transparent"
          >
            <a
              class="Link__AnchorStyled-sc-ec014t-0 eeKUfa group ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="DelegateRow__address"
              href="#"
              rel="noopener noreferrer"
              to=""
            >
              <span
                class="Link__Content-sc-ec014t-1 fPOlTq"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-external.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 dMbCwx justify-end border-2 border-l-0 border-transparent"
          >
            <div
              class="-mr-0.5"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 enzTPF -mr-3 text-theme-primary-600 hover:text-theme-primary-700"
                data-testid="DelegateRow__toggle-1"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Select
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 UdZIx font-bold border-2 border-r-0 border-transparent space-x-3"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 bzZufz -ml-0.5 flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                  title="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                />
              </div>
            </div>
            <span>
              genesis_17
            </span>
          </div>
        </td>
        <td
          class="w-24"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD justify-center border-t-2 border-b-2 border-transparent"
          >
            <a
              class="Link__AnchorStyled-sc-ec014t-0 eeKUfa group ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="DelegateRow__address"
              href="#"
              rel="noopener noreferrer"
              to=""
            >
              <span
                class="Link__Content-sc-ec014t-1 fPOlTq"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-external.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 dMbCwx justify-end border-2 border-l-0 border-transparent"
          >
            <div
              class="-mr-0.5"
            >
              <span>
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 lcpndT -mr-3 text-black"
                  data-testid="DelegateRow__toggle-2"
                  disabled=""
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Select
                  </div>
                </button>
              </span>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateRow should render the selected vote 2`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY font-bold border-2 border-r-0 border-transparent space-x-4 bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 gljhIf -ml-0.5 flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <span>
              arkx
            </span>
          </div>
        </td>
        <td
          class="w-24"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center border-t-2 border-b-2 border-transparent bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600"
          >
            <a
              class="Link__AnchorStyled-sc-ec014t-0 eeKUfa group ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="DelegateRow__address"
              href="#"
              rel="noopener noreferrer"
              to=""
            >
              <span
                class="Link__Content-sc-ec014t-1 fPOlTq"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-external.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end border-2 border-l-0 border-transparent bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600"
          >
            <div
              class="-mr-0.5"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 isLyLB"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Current
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY font-bold border-2 border-r-0 border-transparent space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 gljhIf -ml-0.5 flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                  title="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                />
              </div>
            </div>
            <span>
              genesis_42
            </span>
          </div>
        </td>
        <td
          class="w-24"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center border-t-2 border-b-2 border-transparent"
          >
            <a
              class="Link__AnchorStyled-sc-ec014t-0 eeKUfa group ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="DelegateRow__address"
              href="#"
              rel="noopener noreferrer"
              to=""
            >
              <span
                class="Link__Content-sc-ec014t-1 fPOlTq"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-external.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end border-2 border-l-0 border-transparent"
          >
            <div
              class="-mr-0.5"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
                data-testid="DelegateRow__toggle-1"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Select
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY font-bold border-2 border-r-0 border-transparent space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 gljhIf -ml-0.5 flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                  title="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                />
              </div>
            </div>
            <span>
              genesis_17
            </span>
          </div>
        </td>
        <td
          class="w-24"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center border-t-2 border-b-2 border-transparent"
          >
            <a
              class="Link__AnchorStyled-sc-ec014t-0 eeKUfa group ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="DelegateRow__address"
              href="#"
              rel="noopener noreferrer"
              to=""
            >
              <span
                class="Link__Content-sc-ec014t-1 fPOlTq"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-external.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end border-2 border-l-0 border-transparent"
          >
            <div
              class="-mr-0.5"
            >
              <span>
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 kkDhXe"
                  data-testid="DelegateRow__toggle-2"
                  disabled=""
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Select
                  </div>
                </button>
              </span>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateRow should render the unselected vote 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY font-bold border-2 border-r-0 border-transparent space-x-4 bg-theme-danger-50 dark:bg-theme-background dark:border-theme-danger-400"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 gljhIf -ml-0.5 flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <span>
              arkx
            </span>
          </div>
        </td>
        <td
          class="w-24"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center border-t-2 border-b-2 border-transparent bg-theme-danger-50 dark:bg-theme-background dark:border-theme-danger-400"
          >
            <a
              class="Link__AnchorStyled-sc-ec014t-0 eeKUfa group ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="DelegateRow__address"
              href="#"
              rel="noopener noreferrer"
              to=""
            >
              <span
                class="Link__Content-sc-ec014t-1 fPOlTq"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-external.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end border-2 border-l-0 border-transparent bg-theme-danger-50 dark:bg-theme-background dark:border-theme-danger-400"
          >
            <div
              class="-mr-0.5"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 fxPCrX"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Unselected
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateRow should render when network requires vote amount 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY font-bold border-2 border-r-0 border-transparent space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 gljhIf -ml-0.5 flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <span>
              arkx
            </span>
          </div>
        </td>
        <td
          class="w-24"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center border-t-2 border-b-2 border-transparent"
          >
            <a
              class="Link__AnchorStyled-sc-ec014t-0 eeKUfa group ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="DelegateRow__address"
              href="#"
              rel="noopener noreferrer"
              to=""
            >
              <span
                class="Link__Content-sc-ec014t-1 fPOlTq"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-external.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-68"
          data-testid="DelegateVoteAmount"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center border-t-2 border-b-2 border-transparent"
          >
            <div
              class="relative flex-1 px-3"
            >
              <div
                class="relative"
              >
                <div
                  class="Input__InputWrapperStyled-sc-1i8sd1r-0 haNJFI"
                  disabled=""
                >
                  <div
                    class="relative flex flex-1 h-full"
                  >
                    <input
                      aria-invalid="false"
                      class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full text-right focus:text-left pr-8 text-theme-secondary-text"
                      data-testid="InputCurrency"
                      disabled=""
                      name="amount"
                      placeholder="0"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <span
                class="absolute inset-y-0 flex items-center space-x-3 right-7 cursor-default"
                data-testid="DelegateVoteAmount__ticker"
              >
                <span
                  class="text-theme-secondary-400 dark:text-theme-secondary-700"
                >
                  ARK
                </span>
              </span>
            </div>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end border-2 border-l-0 border-transparent"
          >
            <div
              class="-mr-0.5"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Select
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
